@startuml

title __DATA's Class Diagram__\n

  namespace edu.temple.homerecognition {
    namespace data {
      class edu.temple.homerecognition.data.LoginDataSource {
          + login()
          + logout()
      }
    }
  }
  

  namespace edu.temple.homerecognition {
    namespace data {
      class edu.temple.homerecognition.data.LoginRepository {
          {static} - instance : LoginRepository
          {static} + getInstance()
          + isLoggedIn()
          + login()
          + logout()
          - LoginRepository()
          - setLoggedInUser()
      }
    }
  }
  

  namespace edu.temple.homerecognition {
    namespace data {
      class edu.temple.homerecognition.data.Result {
          + toString()
          - Result()
      }
    }
  }
  

  namespace edu.temple.homerecognition {
    namespace data {
      class edu.temple.homerecognition.data.Result.Error {
          - error : Exception
          + Error()
          + getError()
      }
    }
  }
  

  namespace edu.temple.homerecognition {
    namespace data {
      class edu.temple.homerecognition.data.Result.Success {
          + Success()
          + getData()
      }
    }
  }
  

  edu.temple.homerecognition.data.LoginRepository o-- edu.temple.homerecognition.data.LoginDataSource : dataSource
  edu.temple.homerecognition.data.LoginRepository o-- edu.temple.homerecognition.data.model.LoggedInUser : user
  edu.temple.homerecognition.data.Result +-down- edu.temple.homerecognition.data.Result.Error
  edu.temple.homerecognition.data.Result +-down- edu.temple.homerecognition.data.Result.Success
  edu.temple.homerecognition.data.Result.Error -up-|> edu.temple.homerecognition.data.Result
  edu.temple.homerecognition.data.Result.Success -up-|> edu.temple.homerecognition.data.Result
  edu.temple.homerecognition.data.Result.Success o-- T : data


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
